# chaos-qa-swarm

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: __init__.py  chaos_agent.py  config.py  converters.py  developer_agent.py  endpoints.py  env_loader.py  llm.py  models.py  patch_validation.py  prompts.py  source_bundle.py
docker/: Dockerfile
docs/: API_SCHEMA.md  VULNERABILITIES.md
graph/: __init__.py  config.py  graph.py  nodes.py  routing.py  state.py  verify_helpers.py
judge/: __init__.py  baseline.py  criteria.py  executor.py  models.py  sandbox.py  source_overlay.py
observability/: __init__.py  langfuse_tracing.py
schemas/: api_openapi.json
schemas/endpoints/: items_summary.json  loyalty_score.json  prorate.json  report_aggregate.json  users_lookup.json
scripts/: export_schemas.py  run_chaos_probe.py  run_swarm.py
target_app/: __init__.py  main.py  models.py
target_app/routes/: __init__.py  items.py  loyalty.py  prorate.py  report.py  users.py
tests/: conftest.py  test_agents_converters.py  test_agents_live.py  test_agents_models.py  test_baseline_happy_path.py  test_baseline_requests.py  test_chaos_agent.py  test_developer_agent.py  test_developer_validation.py  test_graph_integration.py  test_graph_nodes.py  test_graph_routing.py  test_judge_criteria.py  test_judge_integration.py  test_langfuse_tracing.py  test_llm.py  test_source_bundle.py  test_source_overlay.py
