[project]
name = "chaos-qa-swarm"
version = "0.1.0"
description = "Chaos QA Swarm — white-box semantic fuzzing target app and QA pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.0.0",
]
judge = [
    "docker>=7.0.0",
    "httpx>=0.27.0",
]
agents = [
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
]
observability = [
    "langfuse>=3.0.0",
    "httpx>=0.27.0",
]
full = ["chaos-qa-swarm[judge,agents,observability]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires Docker daemon or local sandbox execution",
    "llm: requires Groq API key",
    "langfuse: requires Langfuse API keys",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["target_app*", "judge*", "agents*", "graph*", "observability*"]
